--- a/03_Babel_CLI/index.html
+++ b/03_Babel_CLI/index.html
@@ -10,7 +10,7 @@
 			<li>pozicionirati se koristeći CLI u 03_Babel i izvesti: npm install --save-dev babel-cli <ul><li>https://babeljs.io/docs/setup/#installation - pratiti upute</li></ul></li>
 			<li>Instalirati ES2015 (ECMAScript 5) Preset: npm install --save-dev babel-preset-es2015</li>
 		</ol>
-		
+		compile s: npm run build (Biti u direktoriju gdje je .babelrc)
 		
 		<script src="../ChromeLogPrilagodba.js"></script>
 		<script src="lib/skripta.js"></script>
